# generic-sdlc

./: .build-rework-claim.json  .dockerignore  .env.example  .gitignore  .harlequin.toml  .mcp.json  .meitheal.config.example.json  .sdlc-framework.config.example.json  .sdlc-framework.config.json  .ux-design-spec.md  AGENTS.md  CODEBASE-GRADE.md  Dockerfile  Modelfile  Modelfile.tuned  README.md  TASKS.md  _ollama-call.ps1  _ollama-req.json  azure-pipelines.yml  constitution.json  cypress.config.ts  docker-compose.gpu.yml  docker-compose.meshllm-local.yml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  index.html  opencode.json  package-lock.json  package.json  renovate.json  tsconfig.json  tsconfig.scripts.json  vite.config.ts
.cursor/: hooks.json  mcp.json
.github/: CODEOWNERS  renovate.json
.sdlc-framework/: sdlc-framework.db-shm  sdlc-framework.db-wal
cypress/: tsconfig.json
docker/: Dockerfile.meshllm-cuda
docs/: agents.md  aiqa-linear-authoring-loop.md  aiqa.md  api.md  configuration.md  dashboard.md  demo-instructions.md  developer-tools.md  local-ai.md  mcp-meitheal.md  mcp-sdlc-framework.md  structure.md
recipes/: create-story.yaml  verify-change.yaml
rules/: office-tools.mdc
scripts/: agent-economy.py  agent-profiles.py  alignment.py  auto-pr.py  btw.ts  chatllm.ts  cluster-failures.py  coevolution.py  collect-training-data.py  counterfactual.py  culture.py  (+53 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate-icon.ps1  icon.icns
src-tauri/src/: lib.rs  main.rs
(+523 files in other folders)
