[package]
name = "lasair"
version = "0.1.0"
description = "Lasair — Autonomous front-end development agent dashboard"
authors = ["OSV Hub Team"]
edition = "2021"

[lib]
name = "lasair_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
notify = { version = "8", features = ["macos_fsevent"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
